re PR c++/35337 (Broken diagnostic for firstprivate clause)

PR c++/35337
	* semantics.c (finish_omp_clauses): Use %qD instead of %qE for
	DECL_P in not a variable and appears more than once error messages.

	* g++.dg/gomp/pr35337.C: New test.

From-SVN: r133086